# discord-tweet-collector

./: .gitignore  Procfile  pyproject.toml
src/tcbot/: botcli.py  config.py  logger.py  main.py  monitordb.py  tcstream.py  twauth.py
src/twbot/: botcli.py  chwriter.py  config.py  exception.py  logger.py  main.py  twstream.py
tests/: conftest.py
tests/tcbot/: evalcli.py  test_botcli.py  test_config.py  test_monitordb.py  test_twauth.py
tests/tcbot/config/: valid_json_file.json  with_invalid_param.json  with_no_access_secret_param.json  with_no_access_token_param.json  with_no_bot_token_param.json  with_no_consumer_key_param.json  with_no_consumer_secret_param.json  with_no_db_url_param.json
tests/twbot/: evalcli.py  localconfig.py  test_botcli.py  test_config.py
tests/twbot/config/: with_invalid_param.json  with_no_access_secret_param.json  with_no_access_token_param.json
